syntax = "proto3";

option csharp_namespace = "WorkerServer";

package workerserver;

service Worker {
	rpc Subscribe (stream ActionMessage) returns (stream ResponseMessage);
}

message ActionMessage {
	oneof action {
		SendProbe probe = 1; 
		SendRequest request = 2;
		Empty empty = 3;
	}
}

message SendRequest {
	string id = 1;
	string request = 2;
}

message SendProbe {
	string id = 1;
	string timestamp = 2;
}

message Empty {
	string id = 1;
	string timestamp = 2;
}
 
message ResponseMessage {
	oneof response {
		ProbeResponse probe = 1; 
		RequestResponse request = 2;
		DisconnectResponse disconnect = 3;
	}
}

message ProbeResponse {
	string id = 1;
	string node = 2;
}

message RequestResponse {
	string id = 1;
	string node = 2;
	string response = 3;
}

message DisconnectResponse {
	string node = 1;
}